--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,5 @@
 argcomplete==2.0.0
+black==22.8.0
 boto3==1.24.66
 botocore==1.27.66
 build==0.8.0
@@ -12,6 +13,7 @@ cryptography==37.0.4
 durationpy==0.5
 ecdsa==0.18.0
 Flask==2.2.2
+Flask-AWSCognito==1.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
 future==0.18.2
