--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -36,6 +36,7 @@ platformdirs==2.5.2
 pyasn1==0.4.8
 pycparser==2.21
 PyJWT==2.4.0
+pyopenssl==22.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-jose==3.3.0
